nginx-pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-service
  labels:
    app: nginx
spec:
  containers:
  - image: nginx
    name: web-service
